--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Odoo</string>
-    <string name="date_performed">Güncelleme Tarihi</string>
+    <string name="date_performed">Gerçekleştirme Tarihi</string>
     <string name="assesment_method">Yöntem</string>
     <string name="partner_id">Firma</string>
     <string name="subject">Konusu</string>
@@ -11,7 +11,10 @@
     <string name="sync_label_customers">Customers</string>
     <string name="sync_label_Risk">Risk</string>
     <string name="sync_label_Riskassesment">Risk Senkronizasyon</string>
+    <string name="sync_label_Riskassesment_method">Risk Method Senkronizasyon</string>
+
     <string name="sync_label_Riskassesment_authority">com.odoo.addons.Risk.isg_risk_assesment</string>
+    <string name="sync_label_Riskassesment_method_authority">com.odoo.addons.Risk.isg_risk_assesment_method</string>
     <string name="toast_information_saved">Information Saved</string>
     <string name="toast_image_size_too_large">Image size too large !</string>
     <string name="label_no_customer_found">No Customer Found !</string>
