--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,17 @@
     <string name="assesment_method">Yöntem</string>
     <string name="partner_id">Firma</string>
     <string name="subject">Konusu</string>
-
+    <string name="assesment_procedure">Prosedür</string>
     <string name="date_valid_before">Geçerlilik Tarihi</string>
     <string name="date_updated">Güncelleme Tarihi</string>
     <string name="sync_label_customers">Customers</string>
     <string name="sync_label_Risk">Risk</string>
     <string name="sync_label_Riskassesment">Risk Senkronizasyon</string>
     <string name="sync_label_Riskassesment_method">Risk Method Senkronizasyon</string>
-
+    <string name="sync_label_Riskassesment_procedure">Risk Procedure Senkronizasyon</string>
     <string name="sync_label_Riskassesment_authority">com.odoo.addons.Risk.isg_risk_assesment</string>
     <string name="sync_label_Riskassesment_method_authority">com.odoo.addons.Risk.isg_risk_assesment_method</string>
+    <string name="sync_label_Riskassesment_procedure_authority">com.odoo.addons.Risk.isg_risk_assesment_procedure</string>
     <string name="toast_information_saved">Information Saved</string>
     <string name="toast_image_size_too_large">Image size too large !</string>
     <string name="label_no_customer_found">No Customer Found !</string>
